--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.11",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.2"
   },
   "prettier": {
     "semi": true,
